--- a/package.json
+++ b/package.json
@@ -12,8 +12,5 @@
   "dependencies": {
     "bootstrap": "^5.2.2"
   },
-  "devDependencies": {
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
-  }
+  "devDependencies": {}
 }
